infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-observabilty
  namespace: argocd
spec:
  selector:
      matchLabels:
        app: sre-observabilty
  replicas: 2
  template:
    metadata:
      labels:
        app: sre-observabilty
    spec:
      containers:
        - name: sre-observabilty
          image: rafacamppos/sre-app
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
