infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-observability-service
  namespace: argocd
spec:
  type: NodePort
  selector:
    app: sre-observability
  ports:
  - name: http
    port: 80
    targetPort: 8081
    nodePort: 30005
