infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-observability-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: sre.rafael.argocd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sre-observability-service
                port:
                  number: 8080
